--- a/app/src/main/res/layout/indexconnecttify.xml
+++ b/app/src/main/res/layout/indexconnecttify.xml
@@ -18,7 +18,6 @@
             android:layout_height="wrap_content">
 
             <!-- Nội dung khác của bạn ở trên đây -->
-
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -106,7 +105,7 @@
                             </androidx.cardview.widget.CardView>
                         </FrameLayout>
 
-                        <!-- Cai nay la ten nguoi dung-->
+                        <!-- Ten nguoi dung o phan story-->
                         <TextView
                             android:id="@+id/textView"
                             android:layout_width="match_parent"
@@ -143,6 +142,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -197,6 +197,118 @@
                         <!-- Cai nay la ten nguoi dung-->
                         <TextView
                             android:id="@+id/tvAdd"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Hung Yen University of technology and education" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="350dp"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/catba2"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="8dp"
+                    android:scrollbars="none">
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/chat"
+                        android:contentDescription="Profile"
+                        android:background="?android:attr/selectableItemBackground" />
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/chat"
+                        android:contentDescription="Profile"
+                        android:background="?android:attr/selectableItemBackground" />
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:src="@drawable/notify"
+                        android:contentDescription="Search"
+                        android:background="?android:attr/selectableItemBackground" />
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="10"
+                        android:contentDescription="Search"
+                        android:background="?android:attr/selectableItemBackground" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingBottom="10dp"
+                    android:scrollbars="none">
+
+                    <!-- Cai nay de hien thi hinh anh -->
+                    <FrameLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:background="@drawable/border_gradient">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_margin="2dp"
+                            app:cardBackgroundColor="@android:color/white"
+                            app:cardCornerRadius="999dp">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/lvm" />
+                        </androidx.cardview.widget.CardView>
+                    </FrameLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:orientation="vertical"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:scrollbars="none">
+
+                        <!-- Cai nay la ten nguoi dung-->
+                        <TextView
+                            android:id="@+id/tvName2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_gravity="center_horizontal"
+                            android:text="muahe.2004"
+                            android:textStyle="bold" />
+
+                        <!-- Cai nay la ten nguoi dung-->
+                        <TextView
+                            android:id="@+id/tvAdd2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
