--- a/app/src/main/res/layout/indexconnecttify.xml
+++ b/app/src/main/res/layout/indexconnecttify.xml
@@ -5,10 +5,55 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="10dp"
+        android:layout_alignParentTop="true">
+
+        <TextView
+            android:id="@+id/errTxt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:fontFamily="cursive"
+            android:text="Connectify"
+            android:textAlignment="textStart"
+            android:textColor="@color/black"
+            android:textSize="32dp"
+            android:textStyle="bold"
+            android:gravity="center_vertical"
+            tools:ignore="RtlCompat" />
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/notify"
+            android:contentDescription="Example button"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent" />
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/chat"
+            android:contentDescription="Example button"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent" />
+
+    </LinearLayout>
+
     <!-- ScrollView cho phép nội dung cuộn -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="10dp"
+        android:layout_marginTop="60dp"
         android:layout_above="@id/tabMenu">
 
         <!-- Nội dung chính của bạn -->
@@ -16,50 +61,6 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <!-- Nội dung khác của bạn ở trên đây -->
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:paddingTop="10dp"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/errTxt"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    android:layout_marginBottom="10dp"
-                    android:fontFamily="cursive"
-                    android:text="Connectify"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/black"
-                    android:textSize="32dp"
-                    android:textStyle="bold"
-                    android:gravity="center_vertical"
-                    tools:ignore="RtlCompat" />
-
-                <ImageButton
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:src="@drawable/notify"
-                    android:contentDescription="Example button"
-                    android:layout_gravity="center_vertical"
-                    android:background="@android:color/transparent"/>
-
-                <ImageButton
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:src="@drawable/chat"
-                    android:contentDescription="Example button"
-                    android:layout_gravity="center_vertical"
-                    android:background="@android:color/transparent"/>
-
-            </LinearLayout>
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -70,7 +71,6 @@
                     android:orientation="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
                     android:paddingStart="10dp"
                     android:scrollbars="none"
                     android:paddingEnd="10dp">
@@ -98,6 +98,7 @@
                                 android:layout_margin="2dp"
                                 app:cardCornerRadius="999dp"
                                 app:cardBackgroundColor="@android:color/white">
+
                                 <ImageView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -119,26 +120,9 @@
                 </LinearLayout>
             </HorizontalScrollView>
 
-            <!-- Các phần nội dung khác -->
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:scrollbars="none"
-                android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingStart="10dp"
-                    android:scrollbars="none"
-                    android:paddingEnd="10dp">
 
-                    <!-- Nội dung story người dùng -->
-
-                </LinearLayout>
-            </HorizontalScrollView>
-
+            <!-- Bai viet cua nguoi dung -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -180,7 +164,118 @@
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:orientation="vertical"
-                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:scrollbars="none">
+
+                        <!-- Cai nay la ten nguoi dung-->
+                        <TextView
+                            android:id="@+id/tvName1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_gravity="center_horizontal"
+                            android:text="muahe.2004"
+                            android:textStyle="bold" />
+
+                        <!-- Cai nay la ten nguoi dung-->
+                        <TextView
+                            android:id="@+id/tvAdd1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Hung Yen University of technology and education" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="350dp"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/catba2"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="8dp"
+                    android:scrollbars="none">
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/heart"
+                        android:contentDescription="Profile"
+                        android:background="?android:attr/selectableItemBackground" />
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/comment"
+                        android:contentDescription="Profile"
+                        android:background="?android:attr/selectableItemBackground" />
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:src="@drawable/share"
+                        android:contentDescription="Search"
+                        android:background="?android:attr/selectableItemBackground" />
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="10"
+                        android:contentDescription="Search"
+                        android:background="?android:attr/selectableItemBackground" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <!-- Bai viet cua nguoi dung -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingBottom="10dp"
+                    android:scrollbars="none">
+
+                    <!-- Cai nay de hien thi hinh anh -->
+                    <FrameLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:background="@drawable/border_gradient">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_margin="2dp"
+                            app:cardBackgroundColor="@android:color/white"
+                            app:cardCornerRadius="999dp">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/lvm" />
+                        </androidx.cardview.widget.CardView>
+                    </FrameLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:orientation="vertical"
                         android:paddingEnd="10dp"
                         android:scrollbars="none">
 
@@ -222,7 +317,7 @@
                         android:layout_width="wrap_content"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/chat"
+                        android:src="@drawable/heart"
                         android:contentDescription="Profile"
                         android:background="?android:attr/selectableItemBackground" />
 
@@ -230,7 +325,7 @@
                         android:layout_width="wrap_content"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/chat"
+                        android:src="@drawable/comment"
                         android:contentDescription="Profile"
                         android:background="?android:attr/selectableItemBackground" />
 
@@ -238,7 +333,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:src="@drawable/notify"
+                        android:src="@drawable/share"
                         android:contentDescription="Search"
                         android:background="?android:attr/selectableItemBackground" />
 
@@ -250,84 +345,10 @@
                         android:background="?android:attr/selectableItemBackground" />
                 </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
-                    android:paddingBottom="10dp"
-                    android:scrollbars="none">
-
-                    <!-- Cai nay de hien thi hinh anh -->
-                    <FrameLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
-                        android:background="@drawable/border_gradient">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_margin="2dp"
-                            app:cardBackgroundColor="@android:color/white"
-                            app:cardCornerRadius="999dp">
-
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:srcCompat="@drawable/lvm" />
-                        </androidx.cardview.widget.CardView>
-                    </FrameLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:orientation="vertical"
-                        android:paddingStart="10dp"
-                        android:paddingEnd="10dp"
-                        android:scrollbars="none">
-
-                        <!-- Cai nay la ten nguoi dung-->
-                        <TextView
-                            android:id="@+id/tvName2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_gravity="center_horizontal"
-                            android:text="muahe.2004"
-                            android:textStyle="bold" />
-
-                        <!-- Cai nay la ten nguoi dung-->
-                        <TextView
-                            android:id="@+id/tvAdd2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_gravity="center_horizontal"
-                            android:text="Hung Yen University of technology and education" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="350dp"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/lvm"/>
-            </LinearLayout>
         </LinearLayout>
 
 
     </ScrollView>
-
     <!-- Tab Menu luôn luôn dính dưới cùng màn hình -->
     <LinearLayout
         android:id="@+id/tabMenu"
@@ -342,15 +363,15 @@
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/chat"
-            android:contentDescription="Home"
+            android:src="@drawable/trangchu"
+            android:contentDescription="home"
             android:background="?android:attr/selectableItemBackground" />
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/notify"
+            android:src="@drawable/search"
             android:contentDescription="Search"
             android:background="?android:attr/selectableItemBackground" />
 
@@ -358,7 +379,7 @@
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/chat"
+            android:src="@drawable/newpost"
             android:contentDescription="Profile"
             android:background="?android:attr/selectableItemBackground" />
 
@@ -366,15 +387,17 @@
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/chat"
+            android:src="@drawable/film"
             android:contentDescription="Profile"
             android:background="?android:attr/selectableItemBackground" />
+
+
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/notify"
+            android:src="@drawable/user"
             android:contentDescription="Search"
             android:background="?android:attr/selectableItemBackground" />
     </LinearLayout>
